# miniWiki

./: .coderabbit.yaml  .env.example  .env.test.example  .eslintignore  .gitignore  .prettierignore  .todo.json  12345  AGENTS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  README.md  REDIS_AND_SHARE_PLUS_FIXES.md  SECURITY_AUDIT.md  TEST_COVERAGE_PLAN.md  docker-compose.yml  file_service_test.d  package.json  playwright.config.ts  pr_reply.md  temp_tasks.md  tsconfig.e2e.json
.github/workflows/: code-coverage.yml  flutter-analysis.yml  opencode.yml
backend/: .gitignore  Cargo.toml  Dockerfile  SECURITY_AUDIT_TESTS.md  SECURITY_FIXES.md  check_hash.rs  clippy.toml  install_coverage_tool.sh  rustfmt.toml  tarpaulin-report.html
backend/migrations/: 001_initial_schema.sql  002_users.sql  003_documents.sql  004_spaces.sql  005_space_memberships.sql  006_sync_schema.sql  007_add_restored_from_version.sql  007_fulltext_search.sql  008_files.sql  009_chunked_uploads.sql  010_share_links.sql  011_comments_add_author_fields.sql  012_performance_indexes.sql  013_server_clock_persistence.sql  014_revert_timestamptz.sql  014_timestamp_timestamptz.sql  015_fix_timestamp_defaults.sql  016_fix_refresh_token_ip_address.sql
backend/services/auth_service/: Cargo.toml
backend/services/auth_service/src/: email_verification.rs  handlers.rs  jwt.rs  lib.rs  login.rs  logout.rs  models.rs  password.rs  password_reset.rs  permissions.rs  rate_limiter.rs  rbac.rs  rbac_tests.rs  refresh.rs  register.rs  repository.rs  sessions.rs
backend/services/auth_service/tests/: handlers_test.rs  handlers_test_new_tests.rs  password_verification_test.rs
backend/services/document_service/: Cargo.toml
backend/services/document_service/src/: comments.rs  export.rs  handlers.rs  lib.rs  models.rs  repository.rs  sharing.rs  validation.rs
backend/services/document_service/tests/: handlers_test.rs
backend/services/file_service/: Cargo.toml
backend/services/file_service/src/: handlers.rs  handlers_new.rs  lib.rs  models.rs  storage.rs
backend/services/pace_service/src/: repository.rs  repository_tests.rs
backend/services/search_service/: Cargo.toml
backend/services/search_service/src/: handlers.rs  indexer.rs  lib.rs  models.rs  repository.rs
backend/services/search_service/tests/: lib.rs
backend/services/space_service/: Cargo.toml
backend/services/space_service/migrations/: 20240101000000_init.sql
backend/services/space_service/src/: handlers.rs  lib.rs  models.rs  repository.rs
backend/services/space_service/tests/: lib.rs
backend/services/sync_service/: Cargo.toml
backend/services/sync_service/src/: conflict_resolver.rs  lib.rs  state_vector.rs  sync_handler.rs  yjs_handler.rs
backend/services/sync_service/tests/: lib_test.rs  sync_handler_test.rs
backend/services/websocket_service/: Cargo.toml
backend/services/websocket_service/src/: actor.rs  connection_manager.rs  handlers.rs  lib.rs  models.rs  presence.rs  redis_pubsub.rs
backend/services/websocket_service/tests/: lib.rs
backend/shared/cache/: Cargo.toml
backend/shared/cache/src/: error.rs  service.rs
backend/shared/config/: Cargo.toml
backend/shared/config/src/: env.rs  lib.rs  settings.rs
backend/shared/database/: Cargo.toml
backend/shared/database/src/: connection.rs  lib.rs  migrations.rs
backend/shared/errors/: Cargo.toml
backend/shared/errors/src/: error_codes.rs  error_types.rs  lib.rs
backend/shared/models/: Cargo.toml
backend/shared/models/src/: entities.rs
backend/shared/models/tests/: lib_test.rs
backend/shared/security/: Cargo.toml
backend/shared/security/src/: email.rs  lib.rs  password.rs
backend/src/: config.rs  lib.rs  main.rs  observability.rs
backend/src/middleware/: csrf.rs  error_handler.rs  middleware.rs  mod.rs  security_headers.rs  validation.rs
backend/src/observability/: security_audit.rs
backend/src/routes/: mod.rs
backend/src/tests/: helpers.rs  mod.rs
backend/tests/: Cargo.toml  file_service_test.rs  helpers.rs  lib.rs  macros.rs  mod.rs  models.rs  websocket_test.rs
backend/tests/auth/: e2e_flow_test.rs  integration_test.rs  jwt_test.rs  mod.rs  refresh_token_test.rs
backend/tests/documents/: crud_test.rs  e2e_document_flow_test.rs  export_test.rs  integration_test.rs  mod.rs  version_restore_test.rs  versions_test.rs
backend/tests/helpers/: mod.rs
backend/tests/rbac/: permissions_test.rs
backend/tests/search/: search_test.rs
backend/tests/spaces/: integration_test.rs  memberships_test.rs  mod.rs  spaces_test.rs
backend/tests/src/: helpers.rs  lib.rs
backend/tests/src/auth/: login_test.rs  mod.rs  password_reset_test.rs  register_test.rs
backend/tests/sync/: conflict_resolution_test.rs  mod.rs  sync_test.rs
backend/tests/websocket/: presence_test.rs
docs/: user-guide.md
flutter_app/: .flutter-plugins-dependencies  .gitignore  ANDROID_BUILD_VERIFICATION.md  COVERAGE_IMPROVEMENT_SUMMARY.md  COVERAGE_RESOURCES.md  Dockerfile.web  FIXES_2026-01-16.md  FIXES_SUMMARY.md  PERFORMANCE_GUIDE.md  README.md  TEST_COVERAGE_80_PERCENT_PLAN.md  analysis_options.yaml  coverage_analysis.dart  pubspec.yaml
flutter_app/.dart_tool/: package_config.json  package_graph.json
flutter_app/lib/: main.dart
flutter_app/test/: QUICK_START_GUIDE.md  TEST_IMPROVEMENT_PLAN.md  app_config_provider_test.dart  auth_repository_test.dart  auth_service_test.dart  comment_provider_test.dart  comment_repository_impl_test.dart  comment_service_test.dart  comment_test.dart  crdt_service_test.dart  document_provider_test.dart  document_repository_test.dart  document_service_test.dart  document_test.dart  document_version_test.dart  export_service_test.dart  file_repository_impl_test.dart  file_service_test.dart  file_test.dart  local_storage_test.dart  network_error_test.dart  offline_service_test.dart  pending_sync_datasource_test.dart  rbac_service_test.dart  role_test.dart  search_repository_impl_test.dart  search_result_test.dart  search_service_test.dart  share_link_test.dart  share_provider_test.dart  space_test.dart  (+10 more)
spec/: architecture.md  prd.md  principle.md
(+133 files in other folders)
