[package]
name = "miniwiki-backend-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Testing framework
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.5"
actix-rt = "2.9"

# Dependencies from workspace
miniwiki-backend = { path = "../" }
shared_errors = { path = "../shared/errors" }
shared_models = { path = "../shared/models" }
shared_database = { path = "../shared/database" }

# Async utilities
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Test utilities
tokio-test = "0.4"
