[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
shared_errors = { path = "../../shared/errors" }
shared_models = { path = "../../shared/models" }
shared_database = { path = "../../shared/database" }
shared_security = { path = "../../shared/security" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
actix-web = "4.5"
actix-cors = "0.7"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"
password-hash = "0.5.0"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }
email_address = "0.2"
lazy_static = "1.4"
regex = "1.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
actix-rt = "2.9"
tokio-test = "0.4"
