[package]
name = "document_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_errors = { path = "../../shared/errors" }
shared_models = { path = "../../shared/models" }
shared_database = { path = "../../shared/database" }
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.5"
actix-cors = "0.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bcrypt = "0.17"
jsonwebtoken = "9"
config = "0.14"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
actix-rt = "2.9"
tokio-test = "0.4"
futures = "0.3"
