[package]
name = "file_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
shared_errors = { path = "../../shared/errors" }
shared_models = { path = "../../shared/models" }
shared_database = { path = "../../shared/database" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
actix-web = "4.5"
actix-files = "0.6"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# S3 / MinIO
aws-config = "1.1"
aws-sdk-s3 = "1.35"
aws-types = "1.1"

# MIME types
mime = "0.3"

# Multipart form handling
actix-multipart = "0.6"

md5 = "0.8"

futures-util = "0.3"

aes-gcm = "0.10"

[dev-dependencies]
actix-rt = "2.9"
tokio-test = "0.4"
