[package]
name = "search_service"
version = "0.1.0"
edition = "2021"
description = "Full-text search service for miniWiki"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# Web framework
actix-web = "4.5"

# Database
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "json",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Regex for case-insensitive search highlighting
regex = "1.10"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# Internal shared crates
shared_errors = { path = "../../shared/errors" }
shared_models = { path = "../../shared/models" }
shared_database = { path = "../../shared/database" }

[dev-dependencies]
sqlx-cli = { version = "0.7", features = ["postgres"] }
actix-rt = "2.9"
tokio-test = "0.4"
