[package]
name = "space_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
jsonwebtoken = "9.3"

shared_errors = { path = "../../shared/errors" }
shared_models = { path = "../../shared/models" }
shared_database = { path = "../../shared/database" }
