[package]
name = "shared_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
