[package]
name = "shared_errors"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
actix-web = "4.5"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

[dev-dependencies]
tokio-test = "0.4"
