[package]
name = "shared_security"
version = "0.1.0"
edition = "2021"
description = "Shared security utilities for miniWiki backend"

[dependencies]
bcrypt = "0.18.0"
rand = "0.9.2"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
tokio-test = "0.4.5"

[dev-dependencies]
tokio-test = "0.4"
